--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <div id="container">
         <div id= "game">
             <header>
-                <h1 class="title">Wordle!</h1>
+                <h1 class="title">WORDLE!</h1>
             </header>
+            <div id="board-container">
+                <div id="board">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
