Made the game more playable- can check words

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <button data-key="b">b</button> 
                     <button data-key="n">n</button> 
                     <button data-key="m">m</button> 
-                    <button data-key="enter" class="wide-button">Del</button>  
+                    <button data-key="del" class="wide-button">Del</button>  
                   </div>
             </div>
         </div>
