--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Wordle Game!</title>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
     <div id="container">
